welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:16: error: ';' expected but integer literal found.
  && a<=19) {
        ^loneTeen:25: error: Unmatched closing brace '}' ignored here
 }
 ^