welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
  if (a<13) 
  		{if (b>=13 && b<=19) {return true} else {return false}}
  if (a>19)
  		{if (b>=13 && b<=19) {return true} else {return false}}
  else 
  		{if (b>=13 && b<=19) {return false} else {return true}}
}
  
  
  
  
  
  
  
  && a<=19) {
    if (b<13) {return true}
    else {if (b>19) {return true}
          else {return false}}}
 if (b>=13 && b<=19) {
    if (a<13) {return true}
    else {if (a>19) {return true}
          else {return false}}}
}